Fix preview tooltip z-index

--- a/src/devtools/client/debugger/src/components/Editor/Preview/Popup.css
+++ b/src/devtools/client/debugger/src/components/Editor/Preview/Popup.css
@@ -86,14 +86,15 @@
 .tooltip {
   position: fixed;
   z-index: 100;
+  font-size: 12px;
 }
 
 .tooltip .preview-popup {
-  background: var(--theme-toolbar-background);
+  background: var(--toolbox-background);
   max-width: inherit;
   min-height: 80px;
   border: 1px solid var(--theme-splitter-color);
-  box-shadow: 1px 2px 4px 1px var(--theme-toolbar-background-alt);
+  border-radius: 4px;
   padding: 5px;
   height: auto;
   min-height: inherit;
@@ -108,33 +109,4 @@
 .tooltip .gap {
   height: 4px;
   padding-top: 0px;
-}
-
-.add-to-expression-bar {
-  border: 1px solid var(--theme-splitter-color);
-  border-top: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  font-size: 14px;
-  line-height: 30px;
-  background: var(--theme-toolbar-background);
-  color: var(--theme-text-color-inactive);
-  padding: 0 4px;
-}
-
-.add-to-expression-bar .prompt {
-  width: 1em;
-}
-
-.add-to-expression-bar .expression-to-save-label {
-  width: calc(100% - 4em);
-}
-
-.add-to-expression-bar .expression-to-save-button {
-  font-size: 14px;
-  color: var(--theme-comment);
 }
